# ohacker

./: .gitignore  LICENSE  README.md  pyproject.toml  report.md
backend/: README.md  main.py  pyproject.toml  vulnerable_app_fastapi.db
backend/uploads_fastapi/: secrets.txt
frontend/: README.md  index.html
frontend/src/components/: CommentSection.tsx  Navbar.tsx  PostCard.tsx  PostForm.tsx
frontend/src/data/: dummyData.ts
frontend/src/pages/: Index.tsx
src/ohacker/: computer_use.py  main.py  security_patches_agent.py
src/ohacker/cyber_research_agents/: manager.py  planner_agent.py  search_agent.py  writer_agent.py
